fix:  text-align: left;

--- a/src/Components/Cards/style.css
+++ b/src/Components/Cards/style.css
@@ -21,6 +21,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 3px;
+  text-align: left;
 }
 
 .search {
